types IObject interface; refactors to reduce single-use variables; searches by individual object ID on click

--- a/src/app/components/shell/shell.component.html
+++ b/src/app/components/shell/shell.component.html
@@ -22,7 +22,10 @@
 <hr />
 
 <mat-list>
-  <mat-list-item *ngFor="let object of objects$ | async">
+  <mat-list-item
+    *ngFor="let object of objectIds$ | async"
+    (click)="onClick(object)"
+  >
     {{ object }}
   </mat-list-item>
 </mat-list>
