--- a/src/app/components/shell/shell.component.html
+++ b/src/app/components/shell/shell.component.html
@@ -1,23 +1,4 @@
-<mat-form-field appearance="fill">
-  <mat-label>Departments</mat-label>
-  <mat-select
-    [formControl]="departments"
-    multiple
-  >
-    <mat-option
-      *ngFor="let department of departments$ | async"
-      [value]="department.departmentId"
-    >
-      {{ department.displayName }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-<button
-  mat-button
-  (click)="onSearch()"
->
-  Search
-</button>
+<app-search></app-search>
 
 <hr />
 
